<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.goldze.mvvmhabit.ui.changePsw.ChangePsdViewModel" />

        <variable
            name="viewModel"
            type="ChangePsdViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            binding:toolbarViewModel="@{viewModel.toolbarViewModel}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:maxLines="1"
                android:background="@null"
                android:textSize="18sp"
                android:textColor="@color/color_333333"
                android:inputType="textPassword"
                android:text="@={viewModel.oldPassword}"
                android:hint="@string/change_password_old" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_below="@id/quick_login_edit_1_ll"
                android:layout_marginTop="4dp"
                android:background="#3393F9" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@null"
                android:textSize="18sp"
                android:textColor="@color/color_333333"
                android:maxLines="1"
                android:text="@={viewModel.newPassword}"
                android:inputType="textPassword"
                android:hint="@string/change_password_new" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_below="@id/quick_login_edit_1_ll"
                android:layout_marginTop="4dp"
                android:background="#3393F9" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:maxLines="1"
                android:textSize="18sp"
                android:textColor="@color/color_333333"
                android:background="@null"
                android:text="@={viewModel.surePassword}"
                android:inputType="textPassword"
                android:hint="@string/change_password_sure" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_below="@id/quick_login_edit_1_ll"
                android:layout_marginTop="4dp"
                android:background="#3393F9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/setting_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@mipmap/login_btn"
                    android:gravity="center"
                    android:text="@string/sure_txt"
                    binding:onClickCommand="@{viewModel.changePassword}"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>